# jay-frontend-cpp

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  revert_modules.py  to_modules.py
docs/adr/: ADR-001-feature-first-architecture.md
scripts/: install-debian.sh
src/: app_state.cppm  avatar.cppm  avatar_renderer.cppm  chat_renderer.cppm  event_dispatcher.cppm  ipc_client.cppm  main.cpp  renderer.cppm  tab_bar_renderer.cppm  text_input.cppm  theme.cppm
src/app/: app_state.cppm  application.cppm  main_window.cppm  renderer.cppm  shell.cppm  theme.cppm
src/engine/: animation_engine.cppm  focus_manager.cppm  input_dispatcher.cppm  layout_engine.cppm  render_context.cppm  types.cppm  widget.cppm
src/features/avatar/: avatar_renderer.cppm  avatar_state.cppm  avatar_viewmodel.cppm  avatar_widget.cppm
src/features/chat/: bubble_registry.cppm  chat_events.cppm  chat_input.cppm  chat_input_widget.cppm  chat_renderer.cppm  chat_state.cppm  chat_viewmodel.cppm  chat_widget.cppm  message_bubble.cppm  message_bubble_widget.cppm  tool_group_bubble.cppm  tool_group_widget.cppm
src/features/permissions/: permission_modal.cppm  permission_state.cppm  permissions_widget.cppm
src/ipc/: event_dispatcher.cppm  ipc_client.cppm  protocol.cppm
src/shared/layout/: text_layout.cppm
src/shared/scroll/: scroll_controller.cppm  scrollbar.cppm
src/shared/unicode/: unicode.cppm
src/shared/widgets/: button.cppm  label.cppm  layout_primitives.cppm  panel.cppm  scroll_view.cppm  tab_bar.cppm  text_editor.cppm  text_input.cppm
src/state/: actions.cppm  state_store.cppm
src/usecases/: approve_permission_usecase.cppm  create_chat_usecase.cppm  register_client_usecase.cppm  send_message_usecase.cppm  use_case.cppm
wiki/: README.md  index.md
wiki/architecture/: ipc-client.md  overview.md  state-machine.md
wiki/decisions/: 0001-cxx20-modules-and-cmake.md  0002-raylib-for-rendering.md  0003-decoupled-ipc-thread.md
wiki/development/: build-instructions.md  project-structure.md
wiki/phases/: chat-bubble-copy-fix.md
wiki/prds/: core-ipc-integration.md
wiki/vision/: goals.md  non-goals.md  principles.md
